--- a/src/main/resources/frontend/main.html
+++ b/src/main/resources/frontend/main.html
@@ -76,7 +76,9 @@
   </div>
   <div id="compressForm" style="display:none;">
     <select id="compressionAlgorithm">
+      <option value="No compression">No compression</option>
       <option value="GZIP">GZIP</option>
+      <option value="XZ">XZ</option>
       <!-- Add more options here as needed -->
     </select>
     <button onclick="compressFile()">Submit</button>
@@ -242,10 +244,21 @@
 
     if (response.ok) {
       const blob = await response.blob();
+      let filename = 'compressed_file'; // Default filename
+
+      // Extract filename from the Content-Disposition header
+      const contentDisposition = response.headers.get('Content-Disposition');
+      if (contentDisposition) {
+        const matches = contentDisposition.match(/filename\*?=(?:UTF-8'')?([^;]+)/i);
+        if (matches && matches.length > 1) {
+          // If filename is URL-encoded, decode it
+          filename = decodeURIComponent(matches[1].replace(/['"]/g, ''));
+        }
+      }
       const url = window.URL.createObjectURL(blob);
       const a = document.createElement('a');
       a.href = url;
-      a.download = 'compressed_file';
+      a.download = filename;
       document.body.appendChild(a);
       a.click();
       window.URL.revokeObjectURL(url);
